Fix changing size board bug and reset button alignment

--- a/style.css
+++ b/style.css
@@ -15,15 +15,19 @@ body {
 
 .game {
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .board {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
-    width: 60%;
-    height: 60%;
-    margin: 20%;
+    width: 20rem;
+    height: 20rem;
+    margin: auto;
 }
 
 .cell {
